footer design done

--- a/index.html
+++ b/index.html
@@ -34,5 +34,28 @@
     <!--External css-->
     <h2>External CSS</h2>
     <p class="exCSSCl" id="exCSSId">This is External css</p>
+
+    <footer class="footer">
+        <ol>
+            <li>Abdur Rahim</li>
+            <li>Abdur Karim</li>
+            <li>Abdur Rahman</li>
+        </ol>
+        <ol>
+            <li>Abdur Rahim</li>
+            <li>Abdur Karim</li>
+            <li>Abdur Rahman</li>
+        </ol>
+        <ol>
+            <li>Abdur Rahim</li>
+            <li>Abdur Karim</li>
+            <li>Abdur Rahman</li>
+        </ol>
+        <ol>
+            <li>Abdur Rahim</li>
+            <li>Abdur Karim</li>
+            <li>Abdur Rahman</li>
+        </ol>
+    </footer>
 </body>
 </html> 
